# portonet-rust

./: .env  .gitignore  Cargo.toml  README.md
frontend/: admin.html  index.html
frontend/css/: loader.css  olliout.css
frontend/js/: admin.js  index.js
migrations/: 20240912151213_table_system.sql  20240912152944_char_to_text.sql  keys.sql
sqlTables/: keys.sql  logs.sql  system.sql
src/: api_add_key.rs  api_get_counters.rs  api_list_keys.rs  api_open_door.rs  api_revoke_all_keys.rs  api_revoke_key.rs  custom_error_mapper.rs  db_structs.rs  initialize_db.rs  main.rs
src/api/: api_add_key.rs  api_list_keys.rs  api_list_logs.rs  api_open_door.rs  api_revoke_key.rs  mod.rs
src/db_access/: mod.rs  table_keys.rs  table_logs.rs  table_system.rs
